Add forward sort algorithm

--- a/AdvProgCpp/AdvProgCpp.vcxproj
+++ b/AdvProgCpp/AdvProgCpp.vcxproj
@@ -145,6 +145,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Algorithms.h" />
     <ClInclude Include="Link.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="Node.h" />
