--- a/AdvProgCpp/AdvProgCpp.vcxproj.filters
+++ b/AdvProgCpp/AdvProgCpp.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Tests.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Algorithms.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
