--- a/AdvProgCpp/AdvProgCpp.vcxproj
+++ b/AdvProgCpp/AdvProgCpp.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="Node.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="String.h" />
+    <ClInclude Include="StringItr.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Tests.h" />
   </ItemGroup>
