--- a/AdvProgCpp/AdvProgCpp.vcxproj.filters
+++ b/AdvProgCpp/AdvProgCpp.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="StringItr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SharedPtr.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
