--- a/AdvProgCpp/AdvProgCpp.vcxproj.filters
+++ b/AdvProgCpp/AdvProgCpp.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClCompile Include="Tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SharedPtr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
